Implement LDAP bind, get user info, and authResponse
Works with manually input server and user information
No login form or settings retrieval so far, everything is hardcoded

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "flarum/core": "^0.1.0-beta.6",
-        "adldap/adldap": "5.0.*"
+         "adldap2/adldap2": "7.0.*"
     },
     "autoload": {
         "psr-4": {
@@ -24,9 +24,6 @@
         }
     },
     "extra": {
-        "branch-alias": {
-            "dev-master": "0.1.x-dev"
-        },
         "flarum-extension": {
             "title": "LDAP Login",
             "icon": {
@@ -35,5 +32,6 @@
                 "color": "#fff"
             }
         }
-    }
+    },
+    "minimum-stability": "beta"
 }
