--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,38 @@
 {
-    "name": "tituspijean/flarum-ext-auth-ldap",
-    "description": "Allow users to log in through LDAP.",
-    "type": "flarum-extension",
-    "keywords": ["authentication"],
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "TitusPiJean",
-            "email": "tituspijean@outlook.com"
-        }
-    ],
-    "support": {
-        "issues": "https://github.com/tituspijean/flarum-ext-auth-ldap/issues",
-        "source": "https://github.com/tituspijean/flarum-ext-auth-ldap"
-    },
-    "require": {
-        "flarum/core": "^0.1.0-beta.7"
-    },
-    "autoload": {
-        "psr-4": {
-            "TitusPiJean\\Flarum\\Auth\\LDAP\\": "src/"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "0.4-dev"
-        },
-        "flarum-extension": {
-            "title": "LDAP login",
-            "icon": {
-                "name": "address-book",
-                "backgroundColor": "#b15959",
-                "color": "#fff"
-            }
-        }
-    },
-    "minimum-stability": "beta"
+	"name": "tituspijean/flarum-ext-auth-ldap",
+	"description": "Allow users to log in through LDAP.",
+	"type": "flarum-extension",
+	"keywords": ["authentication"],
+	"license": "MIT",
+	"authors": [{
+		"name": "TitusPiJean",
+		"email": "tituspijean@outlook.com"
+	}],
+	"support": {
+		"issues": "https://github.com/tituspijean/flarum-ext-auth-ldap/issues",
+		"source": "https://github.com/tituspijean/flarum-ext-auth-ldap"
+	},
+	"require": {
+		"flarum/core": "^0.1.0-beta.7",
+		"adldap2/adldap2": "v8.1.3"
+	},
+	"autoload": {
+		"psr-4": {
+			"TitusPiJean\\Flarum\\Auth\\LDAP\\": "src/"
+		}
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "0.1-dev"
+		},
+		"flarum-extension": {
+			"title": "LDAP login",
+			"icon": {
+				"name": "address-book",
+				"backgroundColor": "#b15959",
+				"color": "#fff"
+			}
+		}
+	},
+	"minimum-stability": "beta"
 }
