--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
 		"source": "https://github.com/tituspijean/flarum-ext-auth-ldap"
 	},
 	"require": {
-		"flarum/core": "^0.1.0-beta.7",
-		"adldap2/adldap2": "v8.1.3"
+		"flarum/core": ">=0.1.0-beta.10 <0.1.0-beta.12",
+		"adldap2/adldap2": "v10.2.0"
 	},
 	"autoload": {
 		"psr-4": {
@@ -22,13 +22,10 @@
 		}
 	},
 	"extra": {
-		"branch-alias": {
-			"dev-master": "0.x-dev"
-		},
 		"flarum-extension": {
 			"title": "LDAP login",
 			"icon": {
-				"name": "address-book",
+				"name": "far fa-address-book",
 				"backgroundColor": "#b15959",
 				"color": "#fff"
 			}
