--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
 		"source": "https://github.com/tituspijean/flarum-ext-auth-ldap"
 	},
 	"require": {
-		"flarum/core": ">=0.1.0-beta.10 <0.1.0-beta.12",
-		"adldap2/adldap2": "v10.2.0"
+		"flarum/core": ">=0.1.0-beta.12 <=0.1.0-beta.13",
+		"adldap2/adldap2": "v10.2.3"
 	},
 	"autoload": {
 		"psr-4": {
