--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,10 @@ indent_size = 4
 
 [*.{diff,md}]
 trim_trailing_whitespace = false
+
+[*.js]
+indent_style = space
+indent_size = 2
+
+[*.php]
+indent_style = space
