--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 		"source": "https://github.com/tituspijean/flarum-ext-auth-ldap"
 	},
 	"require": {
-		"flarum/core": "0.1.0-beta.16",
+		"flarum/core": "^1.0",
 		"directorytree/ldaprecord": "v2.4.2"
 	},
 	"autoload": {
@@ -30,6 +30,5 @@
 				"color": "#fff"
 			}
 		}
-	},
-	"minimum-stability": "beta"
+	}
 }
