--- a/js/package.json
+++ b/js/package.json
@@ -2,9 +2,9 @@
   "private": true,
   "name": "@tituspijean/auth-ldap",
   "dependencies": {
-    "flarum-webpack-config": "0.1.0-beta.10",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.0.0"
+    "flarum-webpack-config": "^1.0",
+    "webpack": "^4.0",
+    "webpack-cli": "^3.0"
   },
   "scripts": {
     "dev": "webpack --mode development --watch",
