--- a/js/package.json
+++ b/js/package.json
@@ -2,9 +2,12 @@
   "private": true,
   "name": "@tituspijean/auth-ldap",
   "dependencies": {
-    "flarum-webpack-config": "^1.0",
-    "webpack": "^4.0",
-    "webpack-cli": "^3.0"
+    "flarum-webpack-config": "^2.0.0",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
+  },
+  "devDependencies": {
+    "flarum-tsconfig": "^1.0.2"
   },
   "scripts": {
     "dev": "webpack --mode development --watch",
